# Concerts

./: .gitignore  .gitlab-ci.yml  Automation Log.txt  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: daily-update.yml  daily_data_update.yml
1 - Setlist Creation/: logger.py  run_all.py
1 - Setlist Creation/Goose/: README.md  call_api.py  config.py  export_data.py  loaders.py  logger.py  main.py  run_pipeline.py  save_data.py  utils.py
1 - Setlist Creation/Phish/: README.md  call_api.py  (+8 more)
1_DataCollection/: common_config.py  common_utils.py  logger.py  run_all.py
2 - Make Predictions/: prediction_utils.py
2_Predictions/: prediction_utils.py  update_predictions.py
Automation/: Automate_Updates.py  Automated_Emails.py
Data_Manipulation/: Goose.ipynb  Goose.py  Phish.ipynb  Phish.py  Widespread_Panic.ipynb  Widespread_Panic.py
Making_Predictions/: Data Testing.ipynb  Goose.py  Make_Predictions.py  Phish.ipynb  Phish.py  PredictionMaker.py  Predictions.md  UM.py  WSP.py  Widespread_Panic.ipynb  Widespread_Panic.py
Setlist_Creation/: Get_Setlists.py  Goose.ipynb  Goose.py  Goose2.py  Phish.py  Setlist Collector README.md  Setlist Collector.md  SetlistCollector.py  UM.ipynb  UM.py  WSP.py  Widespread Panic.ipynb
Web_Setup/: Email.py  Goose.ipynb  Goose.py  Run.py  stream.py  stream_utils.py
data/: README.md
scripts/: make_all_predictions.py  run_all_pipelines.py  run_all_predict_todays.py  run_goose_pipeline.py  run_phish_pipeline.py  run_um_pipeline.py  run_wsp_pipeline.py
(+392 files in other folders)
