[project]
name = "JamBandNerd"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "datetime==5.5",
    "idna==3.10",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "streamlit==1.44.1",
    "streamlit-option-menu==0.4.0",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "zope-interface==7.2",
    "lxml==4.9.3",
]

[[tool.uv.index]]
package = false
url = "https://pypi.org/simple"
